@@ -3,6 +3,7 @@
 #define HAVE_UNISTD_H 1
 #define PQXX_HAVE_DISTANCE 1
 #define PQXX_HAVE_GCC_VISIBILITY 1
+#define PQXX_HAVE_ISNAN 1
 #define PQXX_HAVE_POLL 1
 #define PQXX_HAVE_SLEEP 1
 #define PQXX_HAVE_STRERROR_R 1
