@@ -16,6 +16,7 @@ PQXX_HAVE_CPP_PRAGMA_MESSAGE	public	compiler
 PQXX_HAVE_CPP_WARNING	public	compiler
 PQXX_HAVE_DISTANCE	internal	compiler
 PQXX_HAVE_GCC_VISIBILITY	internal	compiler
+PQXX_HAVE_ISNAN	internal	compiler
 PQXX_HAVE_MOVE	public	compiler
 PQXX_HAVE_NOEXCEPT	public	compiler
 PQXX_HAVE_POLL	internal	compiler
